Teste de cor e link do repositório adicionado

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+
   <header>
     <section>
       <table cellspacing="10">
@@ -61,13 +62,16 @@
     </table>
   </section>
   <hr size="2" noshade>
- 
+
   <footer>
     <a href="hobbies.html">
       <h3>Meus Hobbies</h3>
     </a>
     <a href="contato.html">
       <h3>Contato</h3>
+    </a>
+    <a href="https://github.com/ppdrox/MyPage">
+      <h3>Repositório Github</h3>
     </a>
   </footer>
 
