Otimização  na parte de css(diminuindo o numero de linhas), removi a form pra email, adiciona classes para as sections

--- a/hobbies.html
+++ b/hobbies.html
@@ -8,14 +8,18 @@
 </head>
 
 <body>
-  <h1>Meus hobbies</h1>
-  <ul>
-    <li><strong><em><a href="https://www.pathofexile.com">Jogar</a></em></strong></li>
-    <li><strong><em><a href="https://myanimelist.net/anime/1575/Code_Geass__Hangyaku_no_Lelouch">Ver
-            anime</a></em></strong></li>
-    <li><strong><em><a href="https://www.mangahere.cc/manga/onepunch_man/">Ler mangá</a></em></strong></li>
-    <li><strong><em><a href="https://www.imdb.com/title/tt0816692/">Ver filme</a></em></strong></li>
-  </ul>
+  <header>
+    <section class="seçao1">
+      <h1>Meus hobbies</h1>
+      <ul>
+        <li><strong><em><a href="https://www.pathofexile.com">Jogar</a></em></strong></li>
+        <li><strong><em><a href="https://myanimelist.net/anime/1575/Code_Geass__Hangyaku_no_Lelouch">Ver
+                anime</a></em></strong></li>
+        <li><strong><em><a href="https://www.mangahere.cc/manga/onepunch_man/">Ler mangá</a></em></strong></li>
+        <li><strong><em><a href="https://www.imdb.com/title/tt0816692/">Ver filme</a></em></strong></li>
+      </ul>
+    </section>
+  </header>
 </body>
 
 </html>
