--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <header>
-    <section>
+    <section class="seçao1">
       <table cellspacing="10">
         <tr>
           <td>
@@ -24,8 +24,9 @@
       </table>
     </section>
   </header>
+
   <hr size="2" noshade>
-  <section>
+  <section class="seçao2">
     <h3>Experiência de Trabalho</h3>
     <table cellspacing="10">
       <thead>
@@ -42,9 +43,10 @@
       </tbody>
     </table>
   </section>
+
   <hr size="2" noshade>
 
-  <section>
+  <section class="seçao3">
     <h3>Skills</h3>
     <table cellspacing="10">
       <tr>
@@ -69,9 +71,6 @@
     </a>
     <a href="contato.html">
       <h3>Contato</h3>
-    </a>
-    <a href="https://github.com/ppdrox/MyPage">
-      <h3>Repositório Github</h3>
     </a>
   </footer>
 
