--- a/contato.html
+++ b/contato.html
@@ -8,20 +8,15 @@
 </head>
 
 <body>
-  <h1>Meu contato</h1>
-  <p>Endereço</p>
-  <p>Telefone</p>
-  <p>Email: pedroonextix256@gmail.com // pedro.jordao@al.infnet.edu.br</p>
-  <hr>
-  <form action="mailto:pedroonextix256@gmail.com" method="post" enctype="text/plain">
-    <label>Seu nome:</label>
-    <input type="text" name="seuNome" value=""><br>
-    <label>Seu Email</label>
-    <input type="email" name="seuEmail" value=""><br>
-    <label>Sua mensagem:</label><br>
-    <textarea name="suaMensagem" rows="10" cols="30"></textarea><br>
-    <input type="submit" name="">
-  </form>
+  <header>
+    <section class="seçao1">
+      <h1>Meu contato</h1>
+      <p>Endereço</p>
+      <p>Telefone</p>
+      <p>Email: pedrooduartej@gmail.com // pedro.jordao@al.infnet.edu.br</p>
+
+    </section>
+  </header>
 </body>
 
 </html>
